# ebsd-vae

./: .gitignore  .~lock.benchmark_chromadb_raw.csv#  LICENSE.md  README.md  benchmark_chromadb_16d.csv  benchmark_chromadb_raw.csv  benchmark_faiss_16d.csv  index_pattern.py  pyproject.toml  train.py
conf/: train.yaml
conf/data_module/: default.yaml
conf/lightning_module/: default.yaml
conf/trainer/: default.yaml
data/: anglefile_sample.txt
latice/: data_module.py  lightning_module.py  model.py
latice/index/: __init__.py  chroma_db.py  dp_indexer.py  faiss_db.py  latent_embedding.py  latent_vector_db_base.py  raw_dp_indexer.py
latice/script/: README.md  benchmark_chromadb_16d.py  benchmark_chromadb_raw.py  benchmark_faiss_16d.py
latice/utils/: colorkey.py  utils.py
notebook/: benchmark.ipynb  index.ipynb  index_faiss.ipynb  index_faiss_raw_pattern.ipynb  index_raw_pattern.ipynb
src/: colorkey.py  data_module.py  lightning_module.py  model.py  utils.py
src/index/: chroma_db.py  dp_indexer.py  latent_embedding.py
src/utils/: colorkey.py  constants.py  utils.py
tests/index/: test_chroma_db.py  test_dp_indexer.py  test_faiss_db.py  test_latent_embedding.py
