[project]
name = "ebsd-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "chromadb>=0.6.3",
    "hydra-core>=1.3.2",
    "ipython>=8.34.0",
    "jupyter>=1.1.1",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "pytest-rich>=0.2.0",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.8",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.ruff]
# lint.extend-select = ["ALL"]
# lint.ignore = [
#     "A005", # shadowing stlib module names
#     "B905", # zip without explicit strict=
#     "D205", # Docstrings formatting
#     "PT023", # pytest marks
#     "S101", # Assertion errors
#     "S604", # usage of a parameter called 'shell'
#     "TC002", # false alarms on TYPE_CHECKING imports
#     "TC001",
#     "E501", # line too long
#     "ISC001", # Recommended disable single-line-implicit-string-concatenation
#     "RET501", # unnecessary-return-none
#     "TRY003", # raise-vanilla-args, TODO: un-ignore this
#     "TRY301", # raise-within-try, TODO: un-ignore this
#     "N818", # error-suffix-on-exception-name
#     "ANN401", # TODO, un-ignore this
#     "PLR0911", # Complexity rules, better handled by C901
#     "PLR0912",
#     "PLR0913",
#     "PLR0915",
#     "PLR1711", # useless-return
#     "S603", # subprocess call
#     "TD003", # missing-todo-link, TODO: (ironic) un-ignore this
#     "EM", # flake8-errmsg, TODO(Robert Forrest): un-ignore this
#     "BLE", # flake8-blind-except, TODO(Robert Forrest): un-ignore this
#     "SLF", # flake8-self
#     "ARG", # flake8-unused-arguments
#     "PD", # pandas-vet, TODO(Robert Forrest): un-ignore this
#     "FBT", # flake8-boolean-trap, TODO(Robert Forrest): un-ignore this
#     "FIX", # flake8-fixme
#     "COM812" # Recommended disable missing-trailing-comma
# ]
lint.pydocstyle.convention = "google"
lint.per-file-ignores = { "tests/*" = ["D", "INP", "PLR2004"], "**/scripts/*" = ["INP"] }
lint.isort.split-on-trailing-comma = false
format.skip-magic-trailing-comma = true
