[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latice"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.5.0",
    "chromadb>=0.6.3",
    "hydra-core>=1.3.2",
    "ipython>=8.34.0",
    "jupyter>=1.1.1",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.1",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "pytest-rich>=0.2.0",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.8",
]

[tool.pytest.ini_options]
pythonpath = [".", "latice"]

[tool.setuptools.packages.find]
include = ["latice*"]


[tool.ruff]
lint.pydocstyle.convention = "google"
lint.per-file-ignores = { "tests/*" = ["D", "INP", "PLR2004"], "**/scripts/*" = ["INP"] }
lint.isort.split-on-trailing-comma = false
format.skip-magic-trailing-comma = true
